force-app/main/default/objects/Support_Alert__c/Support_Alert__c.object-meta.xml
<CustomObject>
    <label>Support Alert</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Support Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>