force-app/main/default/objects/Support_Alert__c/fields/Critical_Flag__c.field-meta.xml
<CustomField>
    <fullName>Critical_Flag__c</fullName>
    <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;IF(Critical__c, &quot;01550000000FzO7&quot;,&quot;01550000000FzOM&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importance</label>
    <type>Text</type>
</CustomField>