force-app/main/default/objects/Support_Alert__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <formula>&quot;/servlet/servlet.FileDownload?file=&quot; &amp;IF(Critical__c, &quot;01550000000FzO7&quot;,&quot;01550000000FzOM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importance</label>
    <type>Text</type>
</CustomField>