force-app/main/default/objects/Support_Alert__c/fields/Legacy_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Source Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>