force-app/main/default/objects/Support_Alert__c/fields/Siebel_ID__c.field-meta.xml
<CustomField>
    <fullName>Siebel_ID__c</fullName>
    <label>Siebel ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>