force-app/main/default/objects/Support_Alert__c/listViews/AllSupportAlerts.listView-meta.xml
<ListView>
    <fullName>AllSupportAlerts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Critical_Flag__c</columns>
    <columns>Description__c</columns>
    <columns>Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Support Alerts</label>
    <language>en_US</language>
</ListView>