force-app/main/default/objects/Support_Alert__c/listViews/CriticalSupportAlerts.listView-meta.xml
<ListView>
    <fullName>CriticalSupportAlerts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Critical_Flag__c</columns>
    <columns>Description__c</columns>
    <columns>Summary__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Critical__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Critical Support Alerts</label>
    <language>en_US</language>
</ListView>